cluster/apps/networking/external-services/atlas/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app atlas-minio
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: atlas.${SECRET_DOMAIN_NAME}.
  ports:
    - name: *app
      port: 9001
      protocol: TCP
      targetPort: 9001
