cluster/apps/networking/external-services/atlas/s3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app atlas-s3
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ragnar.${SECRET_DOMAIN_NAME}.
  ports:
    - name: *app
      port: 9000
      protocol: TCP
      targetPort: 9000
